--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-django_heroku==0.3.1
-Django==3.0.3
-Pillow==7.1.2
-django-crispy-forms==1.9.0
-gunicorn==19.10.0
+asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
 cloudinary==1.24.0
 dj3-cloudinary-storage==0.0.4
+Django==3.1.5
+gunicorn==20.0.4
+idna==2.10
+Pillow==8.1.0
+psycopg2-binary==2.8.6
+pytz==2020.5
+requests==2.25.1
+six==1.15.0
+sqlparse==0.4.1
+urllib3==1.26.4
+whitenoise==5.2.0
